--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "hbs": "^4.2.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.14.1",
     "nodemon": "^3.1.10"
   }
 }
